# secp256k1

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  bench_whitelist  configure.ac
.github/workflows/: ci.yml
build-aux/m4/: ax_jni_include_dir.m4
cmake/: AddCompilerFlags.cmake  FindGMP.cmake
include/: secp256k1.h  secp256k1_schnorr.h
src/: CMakeLists.txt  basic-config.h  bench_ecmult.c  bench_internal.c  checkmem.h  ecmult.h  ecmult_const_impl.h  ecmult_gen_impl.h  ecmult_impl.h  field_10x26_impl.h  field_5x52_impl.h  group.h  group_impl.h  hash_impl.h  libsecp256k1-config.h.cmake.in  scalar.h  scalar_4x64_impl.h  scalar_8x32_impl.h  scalar_impl.h  secp256k1.c  tests.c  tests_exhaustive.c
src/modules/aggsig/: Makefile.am.include  main_impl.h
src/modules/bulletproofs/: inner_product_impl.h  main_impl.h  rangeproof_impl.h  util.h
src/modules/commitment/: main_impl.h
src/modules/ecdh/: Makefile.am.include
src/modules/generator/: main_impl.h
src/modules/rangeproof/: rangeproof_impl.h
src/modules/schnorr/: Makefile.am.include  tests_impl.h
src/modules/schnorrsig/: main_impl.h
src/modules/surjection/: main_impl.h  tests_impl.h
